--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, facilis?</h1>
-    <h2>Lorem ipsum dolor, sit amet consectetur adipisicing.</h2>
-    <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea culpa necessitatibus quidem itaque minima aperiam sit vero porro quae natus, nam accusantium mollitia quaerat sunt omnis non velit. Quis, mollitia.</h3>
-    
+<h1>Welcome to learn <Git-hub></Git-hub></h1>    
 </body>
 </html>
