--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Welcome to learn <Git-hub></Git-hub></h1>    
+<h1>Welcome to learn Git-hub</h1>    
 </body>
 </html>
